<resources>
    <string name="app_name">BookNet</string>

    <string name="app_name_after">Register</string>
    <string name="text_bottom">Войдите в свою учётную запись</string>
    <string name="btn_sign_in">Войти</string>
    <string name="btn_sign_up">Зарегистрироваться</string>
    <string name="password_field">Пароль ( > 5 символов )</string>
    <string name="email_field">Email</string>
    <string name="name_field">Имя</string>
    <string name="surname_field">Фамилия</string>
    <string name="book_name_field">Название книги</string>
    <string name="book_author_field">Автор книги</string>
    <string name="book_genre_field">Жанр книги</string>
    <string name="book_url_field">Ссылка на электронную книгу</string>
    <string name="book_price_field">Цена</string>
    <string name="book_country_field">Страна</string>

    <string name="user_name_const">Имя пользователя:  </string>
    <string name="user_name">undefined</string>
    <string name="user_email_const">E-mail: </string>
    <string name="user_email">undefined</string>
    <string name="interests">Интересы:</string>



    <string name="view_navigation_open">Open</string>
    <string name="view_navigation_close">Close</string>

    <string name="menu_item_1">Account</string>
    <string name="menu_item_2">Basket</string>
    <string name="menu_item_3">Settings</string>
    <string name="menu_item_4">About</string>

    <string name="product_size">Author: Somebody</string>
    <string name="product_color">Genre: Classic</string>
    <string name="product_rating">Rating: 5</string>
    <string name="product_price">Price: 80$</string>
    <string name="action_cart">Shopping cart</string>
    <string name="android_pay">Android Pay. Simple way to pay</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="product">About Product</string>
    <string name="continue_shopping">Continue shopping</string>
    <string name="checkout">Checkout</string>
    <string name="sub_total">Total:</string>
    <string name="quantity">1</string>
    <string name="product_name">Sleek black top</string>
    <string name="price">100 $</string>
    <string name="remove_from_cart">Remove</string>
    <string name="basket">Basket</string>

</resources>
