<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/add_books_window"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/book_name_field"
            android:hint="@string/book_name_field"
            android:text=""
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="20sp"

            app:met_floatingLabel="highlight"
            app:met_singleLineEllipsis="true"
            app:met_baseColor="@android:color/black"
            app:met_primaryColor="@color/material_text" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/book_author_field"
            android:hint="@string/book_author_field"
            android:text=""
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="20sp"

            app:met_floatingLabel="highlight"
            app:met_singleLineEllipsis="true"
            app:met_baseColor="@android:color/black"
            app:met_primaryColor="@color/material_text" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/book_genre_field"
            android:hint="@string/book_genre_field"
            android:text=""
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="20sp"

            app:met_floatingLabel="highlight"
            app:met_singleLineEllipsis="true"
            app:met_baseColor="@android:color/black"
            app:met_primaryColor="@color/material_text" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/book_url_field"
            android:hint="@string/book_url_field"
            android:text=""
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="20sp"

            app:met_floatingLabel="highlight"
            app:met_singleLineEllipsis="true"
            app:met_baseColor="@android:color/black"
            app:met_primaryColor="@color/material_text" />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/book_price_field"
            android:hint="@string/book_price_field"
            android:text=""
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="20sp"

            app:met_floatingLabel="highlight"
            app:met_singleLineEllipsis="true"
            app:met_baseColor="@android:color/black"
            app:met_primaryColor="@color/material_text" />


    </LinearLayout>

</androidx.cardview.widget.CardView>